# PyReverseETL

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ECOSYSTEM_PRODUCTION_READINESS.md  FINAL_STATUS_PHASE3.md  KNOWN_ISSUES.md  LICENSE  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_STATUS.md  PHASE_3_WEEK1_COMPLETE.md  PHASE_3_WEEK3_PLAN.md  PHASE_3_WEEK4_PLAN.md  QUICKSTART.md  README.md  RELEASE_v1.5.0.md  RELEASE_v2.0.0.md  RELEASE_v2.0.1.md  ROADMAP.md  ROADMAP_V2.1.md  SESSION_SUMMARY_TOP_10_LAUNCH.md  SESSION_SUMMARY_v2.0.1.md  SETUP_LINUX.md  SETUP_MACBOOK.md  SETUP_SUMMARY.md  SETUP_WINDOWS_WSL.md  STREAMPDF_PHASE3_START.md  USER_GUIDE_v2.0.1.md  WEEK3_WEEK4_IMPLEMENTATION_COMPLETE.md  docker-compose.local.yml  docker-compose.server.yml  pyproject.toml
.cargo/: config.toml
core/: :memory:  Cargo.toml
core/src/: activation.rs  destination.rs  entity.rs  error.rs  lib.rs  statguardian.rs  streampdf.rs  streamxl.rs  sync.rs  workflow.rs
core/src/adapters/: alert_compat.rs  error.rs  http_client.rs  hubspot.rs  mapping.rs  marketo.rs  mod.rs  oauth_manager.rs  retry_policy.rs  salesforce.rs  schema_detect.rs  webhook.rs
core/src/cdc/: change_detector.rs  changelog.rs  checkpoint.rs  mod.rs
core/src/connectors/: config.rs  connectors_db.rs  database_advanced.rs  destination.rs  hdfs.rs  mod.rs  mysql.rs  object_storage.rs  postgres.rs  rate_limiting.rs  registry.rs  saas.rs  source.rs
core/src/observability/: logs.rs  metrics.rs  mod.rs  traces.rs
core/src/pipeline/: activation_pipeline.rs  backpressure.rs  latency_tracker.rs  mod.rs
core/src/sources/: kafka.rs  mod.rs  polling.rs  sync_config.rs
core/src/storage/: repository.rs  schema.rs
core/src/streaming/: event_processor.rs  event_schema.rs  mod.rs
core/src/testing/: connector_test.rs  harness.rs  metrics.rs  mod.rs  test_data.rs
core/src/transformers/: mod.rs  spark.rs
docs/: ADVANCED_ARCHITECTURE_PATTERNS.md  ADVANCED_CONNECTORS.md  BACKPRESSURE_AND_BUFFERING.md  CONNECTOR_ECOSYSTEM.md  DISTRIBUTED_PROCESSING.md  ETL_ELT_ARCHITECTURE.md  EXACTLY_ONCE_SEMANTICS.md  FOR_BUSINESS_USERS.md  IMPLEMENTATION_BEST_PRACTICES.md  MULTI_DESTINATION_ACTIVATION.md  OBSERVABILITY.md  ORCHESTRATION_AND_API.md  OSS_ALTERNATIVES.md  PARALLEL_TOPIC_SYNC.md  (+10 more)
python/: Cargo.toml
python/pyreverseetl/: cli.py  server.py
python/src/: lib.rs
(+11 files in other folders)
