[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "PyReverseETL"
version = "2.0.1"
description = "The Open Operational Data Activation Runtime"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
module-name = "pyreverseetl._core"
python-source = "python"
manifest-path = "python/Cargo.toml"
features = ["pyo3/extension-module"]

[project.urls]
Repository = "https://github.com/Mullassery/PyReverseETL"
Issues = "https://github.com/Mullassery/PyReverseETL/issues"
