[package]
name = "pyreverseetl-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
# Adapter support
base64 = "0.22"
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
# StatGuardian integration (HTTP API client)
opentelemetry = "0.22"
opentelemetry-http = "0.11"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi", "libz"] }
